--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -29,4 +29,31 @@
   SLOS209G - january 1998 - revised february 2004
   \myurl{http://www.ti.com/lit/ds/symlink/tlv2774.pdf}
 
+  
+  \bibitem{bib:OculusRift}  Parth Rajesh Desai, Pooja Nikhil Desai, Komal Deepak Ajmera, Khushbu Mehta,
+  \textit{A Review Paper on Oculus Rift-A Virtual Reality Headset}
+  \myurl{http://arxiv.org/pdf/1408.1173.pdf}
+
+  \bibitem{bib:OculusRiftDK2}  vrwiki,
+  \textit{Oculus Rift Development Kit 2}
+  \myurl{https://vrwiki.wikispaces.com/Oculus+Rift+Development+Kit+2}
+  
+  \bibitem{bib:castAR} Technical Illusions,
+  \textit{Press Kit}
+  \myurl{http://technicalillusions.com/wp-content/uploads/2013/10/Press-Kit.pdf}
+
+  \bibitem{bib:MicrosoftKinect} Wenjun Zeng,
+  \textit{Microsoft Kinect Sensor and Its Effect}, Multimedia at Work
+  \myurl{http://research.microsoft.com/en-us/um/people/zhang/Papers/Microsoft\%20Kinect\%20Sensor\%20and\%20Its\%20Effect\%20-\%20IEEE\%20MM\%202012.pdf}
+
+  \bibitem{bib:VisualSFM} Changchang Wu,
+  \textit{VisualSFM : A Visual Structure from Motion System}
+  \myurl{http://ccwu.me/vsfm/}
+
+  \bibitem{bib:pi3dscan}
+  \textit{The Pi 3D scanner project}
+  \myurl{http://www.pi3dscan.com/}
+
+  
+  
 \end{thebibliography}
