--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -5,14 +5,22 @@
 %\bibitem[Mont95]{bloklanczos} Peter Montgomery, \textit{A Block Lanczos Algorithm for Finding Dependencies over GF(2)},.
 %Lecture Notes in Computer Science. 921. EUROCRYPT '95. Springer-Verlag. pp. 106–120.
 
-\bibitem{bib:soundSpeed}  Dean, E. A., \textit{Atmospheric Effects on the Speed of Sound}, BATTELLE COLUMBUS LABS DURHAM NC, AUG 1979
+  \bibitem{bib:soundSpeed}  Dean, E. A., \textit{Atmospheric Effects on the Speed of Sound}, BATTELLE COLUMBUS LABS DURHAM NC, AUG 1979
   \myurl{http://www.dtic.mil/cgi-bin/GetTRDoc?Location=U2&doc=GetTRDoc.pdf&AD=ADA076060}
 
-\bibitem{bib:stm32_usb_101} Marcin Peczarski, 
+  \bibitem{bib:stm32_usb_101} Marcin Peczarski, 
   \textit{USB dla niewtajemniczonych w przykładach na mikrokontrolery STM32}, Wydawnictwo BTC, Legionowo 2013,
   \myurl{http://www.mimuw.edu.pl/~marpe/book/stm32_usb_101.zip}
 
-\bibitem{bib:stm32f4Discovery} Discovery kit for STM32F407/417 lines,
+  \bibitem{bib:arduinoNano}  
+  \textit{Arduino Nano (v2.3) User Manual}
+  \myurl{https://www.arduino.cc/en/uploads/Main/ArduinoNanoManual23.pdf}
+  
+  \bibitem{bib:40ST12}
+  \textit{ULTRASONIC SENSOR (GENERAL), 40ST-12}
+  \myurl{https://www.maritex.com.pl/media/uploads/PRODUKTY_PDF/sens/40str-12.pdf}
+  
+  \bibitem{bib:stm32f4Discovery} Discovery kit for STM32F407/417 lines,
   \myurl{http://www.st.com/web/catalog/tools/FM116/SC959/SS1532/PF252419}
 
   \bibitem{bib:stm32f407} datasheet: STM32F405xx, STM32F407xx 
