--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -1,16 +1,16 @@
 \chapter{Nadajnik ultradźwiękowy}
 \section{Budowa i zasada działania}
 
-Nadajnik zbudowany został w oparciu o \textit{Arduino Nano} \cite{arduinoNano} do którego podłączono 
-bezpośrednio cztery nadajniki ultradźwiękowe (rezonatory piezoelektryczne) typu 40ST-12, schemat 
+Nadajnik zbudowany został w oparciu o \textit{Arduino Nano} \cite{bib:arduinoNano} do którego podłączono 
+bezpośrednio cztery nadajniki ultradźwiękowe (rezonatory piezoelektryczne) typu 40ST-12 \cite{bib:40ST12}, schemat 
 przedstawiony jest na rysunku \ref{fig:nadajnik_schemat}.
 
-\rysunek{transmitter}{schemat nadajnika}{\label{fig:nadajnik_schemat}}
+\rysunek{transmitter}{schemat nadajnika ultradźwiękowego}{\label{fig:nadajnik_schemat}}
 
 
 Całość umieszczona została w ramie w kształcie litery \textbf{H} wykonanej z rurek PCV.
 Rezonatory zostały dodatkowo odizolowane od ramy rzepami co ułatwia ich zdejmowanie jak i skutecznie
-zapobiega przenoszeniu drgań.
+zapobiega przenoszeniu się drgań.
 
 \rysunek{nadajnik_H}{szkic ramy nadajnika}{\label{fig:nadajnik_szkic}}
 
