--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -60,12 +60,12 @@ ostatecznie urządzenie jest w stanie śledzić położenie głowicy z rozdzielc
 $\SI{5000}{px} \times \SI{5000}{px} \times \SI{5000}{px}$ na przestrzeni sześcianu o rozmiarach 
 $\SI{2.5}{m} \times \SI{2.5}{m}  \times \SI{2.5}{m} $ przy czasie odświeżania rzędu \SI{350}{ms}.
 Warto podkreślić, że wielkość sześcianu została ograniczona ze względów praktycznych i bez 
-większego problemu można ją zwiększyć zachowując stosunek rozdzielczości na metr,
-natomiast głównym czynnikiem jaki wpływa na czas odświeżania jest czas jaki fala dźwiękowa potrzebuje
+większego problemu można ją zwiększyć zachowując stosunek rozdzielczości na metr.
+Głównym czynnikiem jaki wpływa na czas odświeżania jest czas jaki fala dźwiękowa potrzebuje
 by się rozproszyć, tak by jej odbicia nie wpływały na kolejne pomiary.
 
-Prototyp składa się z dwóch części: \textit{głowicy}, której położenie wraz z orientacją przestrzenną chcemy wyznaczyć
-oraz z \textit{aparatu odbiorczego} w kształcie trójkąta wyznaczającego nam stałe punkty odniesienia.
+Przedstawiany prototyp składa się z dwóch części: \textit{głowicy}, której położenie wraz z orientacją przestrzenną chcemy wyznaczyć
+oraz z \textit{aparatu odbiorczego} w kształcie trójkąta wyznaczającego stałe punkty odniesienia.
 Całość  podłączona jest do komputera za pomocą złącza USB, na którym dokonywane są wszystkie obliczenia,
 końcowym wynikiem jest trójwymiarowy widok, na którym zaznaczona jest pozycja głowicy oraz dwa wektory normalne
 przedstawiające orientacje głowicy.
