--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -22,8 +22,8 @@ trzeci służy jako wyzwalacz.
 Cała logika oprogramowania mieści się w obsłudze przerwania sprzętowego, które reaguje na zmianą stanu logicznego
 na wyzwalaczu,
 po uruchomieniu przerwania oprogramowanie wysyła sygnał na odpowiedni rezonator. 
-Nadany sygnał jest tak dobrany by dało się go w łatwy sposób odróżnić i składa się w dwóch
-części: część wzbudzająca 
+Nadany sygnał jest tak dobrany by dało się go w prosty sposób wyodrębnić i składa się w dwóch
+części: część wzbudzającej oraz części tłumiącej.
 Długość impulsów jest zgodna z częstotliwością rezonansową nadajników, dodatkowo jeden
 impuls jest przesunięty względem drugiego o 180 stopni. Pierwszy z nich ma za zadanie wzbudzić rezonator, a drugi wytłumić, 
 tak by nadany sygnał był jak najkrótszy. 
