--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -59,7 +59,7 @@ Wzmocniony sygnał poprzez wtyczkę $JP1$ doprowadzony jest do \textit{shieldu} 
 
 \clearpage
 
-\section{\textit{shield} do \textit{stm32f4-discovery}}
+\section{\textit{Shield} do \textit{stm32f4-discovery}}
 
 Sygnał z odbiorników doprowadzany jest do \textit{stm32f4-discovery} za pomocą specjalnej przystawki (\textit{shieldu}).
 Jej zadaniem jest przystosowanie amplitud zebranych sygnałów do wartości akceptowalnych przez STM32F407VGT6,
