--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -4,7 +4,7 @@
 Centralną częścią prezentowanego prototypu jest odbiornik,
 jego zadaniem jest wysyłanie sygnałów sterujących do nadajnika, zbieranie ultradźwięków z otoczenia oraz przesłanie
 ich do dalszej analizy do komputera.
-Odbiornik składa się z sześciu części (rysunek \ref{fig:odbiornik_szkic}):
+Składa się on z sześciu części (rysunek \ref{fig:odbiornik_szkic}):
 
 \begin{itemize}
  \item trzech modułów ultradźwiękowych przetwarzających ultradźwięki na sygnał elektryczny
