--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -2,15 +2,15 @@
 
 \addcontentsline{toc}{chapter}{Bibliografia}
 
-%\bibitem[Mont95]{bloklanczos} Peter Montgomery, \textit{A Block Lanczos Algorithm for Finding Dependencies over GF(2)},.
-%Lecture Notes in Computer Science. 921. EUROCRYPT '95. Springer-Verlag. pp. 106–120.
-
   \bibitem{bib:soundSpeed}  Dean, E. A., \textit{Atmospheric Effects on the Speed of Sound}, BATTELLE COLUMBUS LABS DURHAM NC, AUG 1979
   \myurl{http://www.dtic.mil/cgi-bin/GetTRDoc?Location=U2&doc=GetTRDoc.pdf&AD=ADA076060}
 
   \bibitem{bib:stm32_usb_101} Marcin Peczarski, 
   \textit{USB dla niewtajemniczonych w przykładach na mikrokontrolery STM32}, Wydawnictwo BTC, Legionowo 2013,
   \myurl{http://www.mimuw.edu.pl/~marpe/book/stm32_usb_101.zip}
+
+  \bibitem{bib:FFT_correlation} Weisstein, Eric W. \textit{Cross-Correlation Theorem.} From MathWorld--A Wolfram Web Resource. 
+  \myurl{http://mathworld.wolfram.com/Cross-CorrelationTheorem.html}
 
   \bibitem{bib:arduinoNano}  
   \textit{Arduino Nano (v2.3) User Manual}
