--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -138,7 +138,7 @@ TODO: dodać
 \include{nadajnik}
 \include{odbiornik}
 \include{mp3d}
-\include{kalibracja}
+%\include{kalibracja}
 \include{podsumowanie}
 \include{biblio}
 %\include{dodatek}
