--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -84,10 +84,15 @@ dodatkowo przystawka zawiera układ zasilający jak i wyprowadzone są z niej sy
 Zakres napięć dopuszczalnych dla przetwornika analogowo-cyfrowego zawierają się w przedziale od 0V do 3.3V,
 dlatego zastosowany został układ TLV2774 \cite{bib:TLV2774}, który zawiera w sobie 4 wzmacniacze operacyjne typu
 rail-to-rail. Wzmacniacze pracują w układzie odwracającym z ustawianym wzmocnieniem, do których dodano regulowane napięcie odniesienia.
-Schemat przystawki przedstawiony jest na rysunku \ref{fig:shild}.
+Schemat przystawki przedstawiony jest na rysunku \ref{fig:przystawka}.
 
 
 
-\rysunek{mainboard2}{schemat przystawki do \textit{stm32f4-discovery}}{\label{fig:shild}}
+ \begin{figure}[h!]
+    \centering
+    \includegraphics[width=1\textwidth, trim= 5mm 0mm 0mm 0mm,clip]{mainboard2}
+    \caption{schemat przystawki do \textit{stm32f4-discovery}}
+    \label{fig:przystawka}
+\end{figure}
 
 
