--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -54,24 +54,23 @@ Tabela \ref{table:czestotliwosci} zawiera wyniki pomiarów częstotliwości, gwi
   \centering
   \begin{tabular}{|r|r|r|}
     \hline 
-    nr & nadajnik: 40ST-12 & odbiornik: 40SR-12\\
+    Nr & Nadajnik: 40ST-12 & Odbiornik: 40SR-12\\
     \hline
-    1  &   40.88kHz & *40.65kHz \\
-    2  &   41.12kHz &  40.45kHz \\
-    3  &  *40.78kHz &  39.52kHz \\
-    4  &   41.19kHz &  40.47kHz \\
-    5  &   40.92kHz &  40.66kHz \\
-    6  &   39.68kHz & *40.69kHz \\
-    7  &   39.78kHz &  40.59kHz \\
-    8  &  *40.80kHz &  40.39kHz \\
-    9  &   40.90kHz &  40.29kHz \\
-    10 &  *40.66kHz & *40.68kHz \\
-    11 &  *40.85kHz &  39.22kHz \\
-    12 &   41.01kHz &  39.51kHz \\
-    13 &   41.00kHz &  39.92kHz \\
-    
-    14 &   39.82kHz &  39.26kHz \\
-    15 &   39.64kHz &  39.11kHz \\
+    1  &   \SI{40,88}{kHz} & *\SI{40,65}{kHz} \\
+    2  &   \SI{41,12}{kHz} &  \SI{40,45}{kHz} \\
+    3  &  *\SI{40,78}{kHz} &  \SI{39,52}{kHz} \\
+    4  &   \SI{41,19}{kHz} &  \SI{40,47}{kHz} \\
+    5  &   \SI{40,92}{kHz} &  \SI{40,66}{kHz} \\
+    6  &   \SI{39,68}{kHz} & *\SI{40,69}{kHz} \\
+    7  &   \SI{39,78}{kHz} &  \SI{40,59}{kHz} \\
+    8  &  *\SI{40,80}{kHz} &  \SI{40,39}{kHz} \\
+    9  &   \SI{40,90}{kHz} &  \SI{40,29}{kHz} \\
+    10 &  *\SI{40,66}{kHz} & *\SI{40,68}{kHz} \\
+    11 &  *\SI{40,85}{kHz} &  \SI{39,22}{kHz} \\
+    12 &   \SI{41,01}{kHz} &  \SI{39,51}{kHz} \\
+    13 &   \SI{41,00}{kHz} &  \SI{39,92}{kHz} \\
+    14 &   \SI{39,82}{kHz} &  \SI{39,26}{kHz} \\
+    15 &   \SI{39,64}{kHz} &  \SI{39,11}{kHz} \\
     \hline
   \end{tabular}
   \caption{Częstotliwości rezonansowe przetworników piezoelektrycznych}
