--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -10,6 +10,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[pdfborder={0 0 0}]{hyperref}
 
+\SIdecimalsign{,}
 %include ps
 \usepackage{graphicx}
 %\epstopdfsetup{update}
